# wlcc

./: .gitignore  CMakeLists.txt  README.md
CDR/: CRM and CDR field explanation.docx  Centre wise_Calc_Sheet_2025-11.xlsx  SLAs for invoice prococessing.docx
CDR/MSC CDR/TN CDR November 2025/: CBT ZTE GMSC TO BSNLCC NAGERCOIL (BSNLCC_NGC)_MTC & MOC_01-Nov-2025_01-Nov-2025_MSC_29.txt  CBT ZTE GMSC TO BSNLCC NAGERCOIL (BSNLCC_NGC)_MTC & MOC_02-Nov-2025_02-Nov-2025_MSC_29.txt  CBT ZTE GMSC TO BSNLCC NAGERCOIL (BSNLCC_NGC)_MTC & MOC_03-Nov-2025_03-Nov-2025_MSC_29.txt  CBT ZTE GMSC TO BSNLCC NAGERCOIL (BSNLCC_NGC)_MTC & MOC_04-Nov-2025_04-Nov-2025_MSC_29.txt  CBT ZTE GMSC TO BSNLCC NAGERCOIL (BSNLCC_NGC)_MTC & MOC_05-Nov-2025_05-Nov-2025_MSC_29.txt  CBT ZTE GMSC TO BSNLCC NAGERCOIL (BSNLCC_NGC)_MTC & MOC_06-Nov-2025_06-Nov-2025_MSC_29.txt  CBT ZTE GMSC TO BSNLCC NAGERCOIL (BSNLCC_NGC)_MTC & MOC_07-Nov-2025_07-Nov-2025_MSC_29.txt  CBT ZTE GMSC TO BSNLCC NAGERCOIL (BSNLCC_NGC)_MTC & MOC_08-Nov-2025_08-Nov-2025_MSC_29.txt  CBT ZTE GMSC TO BSNLCC NAGERCOIL (BSNLCC_NGC)_MTC & MOC_09-Nov-2025_09-Nov-2025_MSC_29.txt  CBT ZTE GMSC TO BSNLCC NAGERCOIL (BSNLCC_NGC)_MTC & MOC_10-Nov-2025_10-Nov-2025_MSC_29.txt  (+110 more)
include/: ccperformevaluate.h  cdr_cc.h  dataextraction.h  excel_cm.h  ibd_subtotals.h  inputvalidator.h  subtotal_post.h
src/: ccperformevaluate.cpp  cdr_cc.cpp  dataextraction.cpp  excel_cm.cpp  ibd_subtotals.cpp  inputvalidator.cpp  main.cpp  modccperform.cpp  pattern_match.cpp  subtotal_post.cpp  test_ibd_subtotals.cpp  wdatagen.cpp  wsubtotal.cpp  wtest.cpp
(+271 files in other folders)
